@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.srf_podcast_ch" name="SRF Podcast Plugin" version="1.3.1" provider-name="Christian Rueedi">
+<addon id="plugin.video.srf_podcast_ch" name="SRF Podcast Plugin" version="1.3.2" provider-name="Christian Rueedi">
   <requires>
     <import addon="xbmc.python" version="2.14.0"/>
 	<import addon="script.module.elementtree"   version="1.2.7"/>
