@@ -1,3 +1,8 @@
+[B]v1.3.2[/B]
+- Added extended title information
+- Added page information on episode list
+- Fixed issue with gzip file openings
+
 [B]v1.3.1[/B]
 - Fixed smaller issues in the previous version.
 
